DOP-2411: Fix cutoff sidenav (#480)
* DOP-2411: Fix cutoff sidenav

* Update src/styles/sidebar.module.css

--- a/src/styles/sidebar.module.css
+++ b/src/styles/sidebar.module.css
@@ -4,6 +4,6 @@
 .sphinxsidebar {
   display: block !important;
   overflow-y: auto !important;
-  height: 90vh;
+  height: calc(100vh - 45px);
   position: sticky !important;
 }
